--- a/AirbnbDataWrangling.ipynb
+++ b/AirbnbDataWrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "bd5bf6a8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "cc050ea5",
    "metadata": {
     "scrolled": true
@@ -22,10 +22,14 @@
     {
      "data": {
       "text/plain": [
-       "['.ipynb_checkpoints', 'AB_US_2020.csv', 'Airbnb Data Wrangling.ipynb']"
+       "['.git',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'AB_US_2020.csv',\n",
+       " 'AirbnbDataWrangling.ipynb',\n",
+       " 'README.md']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "6ddd2ee4",
    "metadata": {},
    "outputs": [],
@@ -47,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "1976761a",
    "metadata": {},
    "outputs": [
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "cd8079c7",
    "metadata": {},
    "outputs": [
@@ -279,7 +283,7 @@
        "2  Asheville  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "2a272ef7",
    "metadata": {},
    "outputs": [
@@ -305,7 +309,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "e49e03e9",
    "metadata": {},
    "outputs": [
@@ -343,7 +347,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "51c7b389",
    "metadata": {},
    "outputs": [
@@ -532,7 +536,7 @@
        "max                        593.000000        365.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "0b3053ac",
    "metadata": {},
    "outputs": [
@@ -584,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7ce6baf6",
    "metadata": {},
    "outputs": [
@@ -594,7 +598,7 @@
        "(226030, 17)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "be192d46",
    "metadata": {},
    "outputs": [
@@ -641,8 +645,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a5c1b9cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['last_review'] = pd.to_datetime(df['last_review'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9d8286a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                         int64\n",
+       "name                                      object\n",
+       "host_id                                    int64\n",
+       "host_name                                 object\n",
+       "neighbourhood_group                       object\n",
+       "neighbourhood                             object\n",
+       "latitude                                 float64\n",
+       "longitude                                float64\n",
+       "room_type                                 object\n",
+       "price                                      int64\n",
+       "minimum_nights                             int64\n",
+       "number_of_reviews                          int64\n",
+       "last_review                       datetime64[ns]\n",
+       "reviews_per_month                        float64\n",
+       "calculated_host_listings_count             int64\n",
+       "availability_365                           int64\n",
+       "city                                      object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "795099c6",
    "metadata": {},
    "outputs": [],
    "source": []
