Data Wrangling Modified

--- a/AirbnbDataWrangling.ipynb
+++ b/AirbnbDataWrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "id": "bd5bf6a8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "id": "cc050ea5",
    "metadata": {
     "scrolled": true
@@ -26,10 +26,11 @@
        " '.ipynb_checkpoints',\n",
        " 'AB_US_2020.csv',\n",
        " 'AirbnbDataWrangling.ipynb',\n",
+       " 'AirbnbData_Cleaned.csv',\n",
        " 'README.md']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "id": "6ddd2ee4",
    "metadata": {},
    "outputs": [],
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "id": "1976761a",
    "metadata": {},
    "outputs": [
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "id": "cd8079c7",
    "metadata": {},
    "outputs": [
@@ -283,7 +284,7 @@
        "2  Asheville  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "id": "2a272ef7",
    "metadata": {},
    "outputs": [
@@ -309,7 +310,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "id": "e49e03e9",
    "metadata": {},
    "outputs": [
@@ -347,7 +348,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "id": "51c7b389",
    "metadata": {},
    "outputs": [
@@ -536,7 +537,7 @@
        "max                        593.000000        365.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "id": "0b3053ac",
    "metadata": {},
    "outputs": [
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "id": "7ce6baf6",
    "metadata": {},
    "outputs": [
@@ -598,7 +599,7 @@
        "(226030, 17)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "id": "be192d46",
    "metadata": {},
    "outputs": [
@@ -645,8 +646,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "a5c1b9cb",
+   "execution_count": 65,
+   "id": "9d8286a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                  int64\n",
+       "name                               object\n",
+       "host_id                             int64\n",
+       "host_name                          object\n",
+       "neighbourhood_group                object\n",
+       "neighbourhood                      object\n",
+       "latitude                          float64\n",
+       "longitude                         float64\n",
+       "room_type                          object\n",
+       "price                               int64\n",
+       "minimum_nights                      int64\n",
+       "number_of_reviews                   int64\n",
+       "last_review                        object\n",
+       "reviews_per_month                 float64\n",
+       "calculated_host_listings_count      int64\n",
+       "availability_365                    int64\n",
+       "city                               object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "0ad255e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         NaN\n",
+       "1         NaN\n",
+       "2         NaN\n",
+       "3         NaN\n",
+       "4         NaN\n",
+       "         ... \n",
+       "226025    NaN\n",
+       "226026    NaN\n",
+       "226027    NaN\n",
+       "226028    NaN\n",
+       "226029    NaN\n",
+       "Name: neighbourhood_group, Length: 226030, dtype: object"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['neighbourhood_group']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "75a1acaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,8 +726,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9d8286a8",
+   "execution_count": 68,
+   "id": "638115df",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +753,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,11 +764,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
+   "id": "8b2d1f05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "486da5f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                                0\n",
+       "name                              0\n",
+       "host_id                           0\n",
+       "host_name                         0\n",
+       "neighbourhood_group               0\n",
+       "neighbourhood                     0\n",
+       "latitude                          0\n",
+       "longitude                         0\n",
+       "room_type                         0\n",
+       "price                             0\n",
+       "minimum_nights                    0\n",
+       "number_of_reviews                 0\n",
+       "last_review                       0\n",
+       "reviews_per_month                 0\n",
+       "calculated_host_listings_count    0\n",
+       "availability_365                  0\n",
+       "city                              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "795099c6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('AirbnbData_Cleaned.csv')"
+   ]
   }
  ],
  "metadata": {
