Preprocessing and Training for Capstone 2"

--- a/Airbnb Data Preprocessing and Training.ipynb
+++ b/Airbnb Data Preprocessing and Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ae266a33",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d48b4a72",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "047464b6",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "463f13c8",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "457fcac0",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "190d6bed",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "71bfa6b9",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "52bb28bf",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "dc8cf71e",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "90a4dd30",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "4                       -0.309170         -0.296964  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0aae48ca",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e9c3c117",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "((59600, 10), (25544, 10))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "0dd94861",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "((59600,), (25544,))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,39 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8a19049d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Unnamed: 0                        float64\n",
-       "id                                float64\n",
-       "host_id                           float64\n",
-       "latitude                          float64\n",
-       "longitude                         float64\n",
-       "minimum_nights                    float64\n",
-       "number_of_reviews                 float64\n",
-       "reviews_per_month                 float64\n",
-       "calculated_host_listings_count    float64\n",
-       "availability_365                  float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
-   "id": "610031d9",
+   "id": "8a19049d",
    "metadata": {},
    "outputs": [
     {
@@ -410,12 +379,43 @@
     }
    ],
    "source": [
+    "X_train.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "610031d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0                        float64\n",
+       "id                                float64\n",
+       "host_id                           float64\n",
+       "latitude                          float64\n",
+       "longitude                         float64\n",
+       "minimum_nights                    float64\n",
+       "number_of_reviews                 float64\n",
+       "reviews_per_month                 float64\n",
+       "calculated_host_listings_count    float64\n",
+       "availability_365                  float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "X_test.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "a962ec72",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "Name: price, Length: 59600, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,8 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "eabf2f19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaled_df.to_csv('Scaled Cleaned Airbnb Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e84774ff",
    "metadata": {},
    "outputs": [],
    "source": []
