--- a/Airbnb Data Modeling.ipynb
+++ b/Airbnb Data Modeling.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d52b7f97",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a8e87705",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f9462718",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "4              0.0             0.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8a3133e2",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5ef073c4",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
        "4              0.0             0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "db3c26bc",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "4                               1               116  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "534b8cfe",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ec14f73e",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
        "4                               1               116  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "34bf6e2d",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
        "Name: price, Length: 85144, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1fe7d90c",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "a2430caa",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
        "((59600, 12), (25544, 12))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "fadd83fc",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
        "((59600,), (25544,))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "158b1255",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7a08d00f",
    "metadata": {},
    "outputs": [],
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "fbe261cd",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f9bf9b1f",
    "metadata": {},
    "outputs": [],
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "73b8c94d",
    "metadata": {},
    "outputs": [
@@ -803,7 +803,7 @@
        "(0.014547568360470553, 0.015390596406085977)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "af69301e",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
        "(111.90724901715284, 111.56331007165414)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "35b979b3",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
        "array([0.01439086, 0.01781162, 0.00758168, 0.02336099, 0.01790095])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "44859ee2",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
        "(0.016209219395810347, 0.005183018497957226)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "91ab7562",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
        "array([0.01, 0.03])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "618d3861",
    "metadata": {},
    "outputs": [],
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "45114ff5",
    "metadata": {},
    "outputs": [
@@ -934,11 +934,11 @@
       "text/plain": [
        "Pipeline(steps=[('selectkbest',\n",
        "                 SelectKBest(k='all',\n",
-       "                             score_func=<function f_regression at 0x00000233E5CE0790>)),\n",
+       "                             score_func=<function f_regression at 0x000002AED1B02B80>)),\n",
        "                ('linearregression', LinearRegression())])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "92f4cdfe",
    "metadata": {},
    "outputs": [],
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "436442fd",
    "metadata": {},
    "outputs": [
@@ -970,7 +970,7 @@
        "(0.014547568360470553, 0.015390596406085977)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "7a004774",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
        "(111.90724901715284, 111.56331007165414)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "9a1dfca9",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "ead47193",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
        "(0.016209219395810347, 0.005183018497957226)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "b5bd8e17",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
        "array([0.01, 0.03])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "f4fe3e34",
    "metadata": {},
    "outputs": [],
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "b2e4a4eb",
    "metadata": {},
    "outputs": [],
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "49bd36d9",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        "GridSearchCV(cv=5,\n",
        "             estimator=Pipeline(steps=[('selectkbest',\n",
        "                                        SelectKBest(k='all',\n",
-       "                                                    score_func=<function f_regression at 0x00000233E5CE0790>)),\n",
+       "                                                    score_func=<function f_regression at 0x000002AED1B02B80>)),\n",
        "                                       ('linearregression',\n",
        "                                        LinearRegression())]),\n",
        "             n_jobs=-1,\n",
@@ -1126,7 +1126,7 @@
        "                                            12]})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "30784ade",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1147,7 @@
        "{'selectkbest__k': 8}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "cb0e1b42",
    "metadata": {},
    "outputs": [],
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "85495e05",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "839569f2",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1198,7 @@
        "0.015390596406085755"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "579528b9",
    "metadata": {},
    "outputs": [
@@ -1219,7 +1219,7 @@
        "111.5633100716542"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "09b943d6",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "32fc2bb3",
    "metadata": {},
    "outputs": [
@@ -1275,7 +1275,7 @@
        "(0.016209219395810347, 0.005183018497957242)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "id": "c1e2e01e",
    "metadata": {},
    "outputs": [
@@ -1296,7 +1296,7 @@
        "array([0.01, 0.03])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2062,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 45,
    "id": "9b1aae64",
    "metadata": {},
    "outputs": [],
@@ -2072,24 +2072,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 46,
+   "id": "667db9d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: joblib in c:\\users\\malak\\anaconda3\\lib\\site-packages (1.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "id": "8cce7ff2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['RF Regression Model for Price Prediction.sav']"
+       "['Linear Regression Model.sav']"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = rf_best\n",
-    "filename = 'RF Regression Model for Price Prediction.sav'\n",
+    "model = pipe_best\n",
+    "filename = 'Linear Regression Model.sav'\n",
     "joblib.dump(model, filename)"
    ]
   },
