--- a/AirbnbDataWrangling.ipynb
+++ b/AirbnbDataWrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "bd5bf6a8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "cc050ea5",
    "metadata": {
     "scrolled": true
@@ -25,12 +25,20 @@
        "['.git',\n",
        " '.ipynb_checkpoints',\n",
        " 'AB_US_2020.csv',\n",
+       " 'Airbnb Data EDA.ipynb',\n",
+       " 'Airbnb Data Modeling.ipynb',\n",
+       " 'Airbnb Data Preprocessing and Training.ipynb',\n",
        " 'AirbnbDataWrangling.ipynb',\n",
        " 'AirbnbData_Cleaned.csv',\n",
-       " 'README.md']"
+       " 'Linear Regression Model.sav',\n",
+       " 'Numeric Data.csv',\n",
+       " 'README.md',\n",
+       " 'RF Regression Model for Price Prediction.sav',\n",
+       " 'Scaled Cleaned Airbnb Data.csv',\n",
+       " 'X Data.csv']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "6ddd2ee4",
    "metadata": {},
    "outputs": [],
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "1976761a",
    "metadata": {},
    "outputs": [
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "cd8079c7",
    "metadata": {},
    "outputs": [
@@ -284,7 +292,7 @@
        "2  Asheville  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "2a272ef7",
    "metadata": {},
    "outputs": [
@@ -310,7 +318,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "e49e03e9",
    "metadata": {},
    "outputs": [
@@ -348,7 +356,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "id": "51c7b389",
    "metadata": {},
    "outputs": [
@@ -537,7 +545,7 @@
        "max                        593.000000        365.000000  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "id": "0b3053ac",
    "metadata": {},
    "outputs": [
@@ -589,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "id": "7ce6baf6",
    "metadata": {},
    "outputs": [
@@ -599,7 +607,7 @@
        "(226030, 17)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "id": "be192d46",
    "metadata": {},
    "outputs": [
@@ -646,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "id": "9d8286a8",
    "metadata": {},
    "outputs": [
@@ -673,7 +681,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "id": "0ad255e6",
    "metadata": {},
    "outputs": [
@@ -705,7 +713,7 @@
        "Name: neighbourhood_group, Length: 226030, dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "75a1acaa",
    "metadata": {},
    "outputs": [],
@@ -726,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "id": "638115df",
    "metadata": {},
    "outputs": [
@@ -753,7 +761,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "id": "8b2d1f05",
    "metadata": {},
    "outputs": [],
@@ -774,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "id": "486da5f9",
    "metadata": {},
    "outputs": [
@@ -801,7 +809,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "id": "795099c6",
    "metadata": {},
    "outputs": [],
