--- a/AirbnbDataWrangling.ipynb
+++ b/AirbnbDataWrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "bd5bf6a8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "cc050ea5",
    "metadata": {
     "scrolled": true
@@ -29,16 +29,10 @@
        " 'Airbnb Data Modeling.ipynb',\n",
        " 'Airbnb Data Preprocessing and Training.ipynb',\n",
        " 'AirbnbDataWrangling.ipynb',\n",
-       " 'AirbnbData_Cleaned.csv',\n",
-       " 'Linear Regression Model.sav',\n",
-       " 'Numeric Data.csv',\n",
-       " 'README.md',\n",
-       " 'RF Regression Model for Price Prediction.sav',\n",
-       " 'Scaled Cleaned Airbnb Data.csv',\n",
-       " 'X Data.csv']"
+       " 'README.md']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "6ddd2ee4",
    "metadata": {},
    "outputs": [],
@@ -60,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "1976761a",
    "metadata": {},
    "outputs": [
@@ -156,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "cd8079c7",
    "metadata": {},
    "outputs": [
@@ -292,7 +286,7 @@
        "2  Asheville  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "2a272ef7",
    "metadata": {},
    "outputs": [
@@ -318,7 +312,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "e49e03e9",
    "metadata": {},
    "outputs": [
@@ -356,7 +350,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "51c7b389",
    "metadata": {},
    "outputs": [
@@ -545,7 +539,7 @@
        "max                        593.000000        365.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "0b3053ac",
    "metadata": {},
    "outputs": [
@@ -597,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "7ce6baf6",
    "metadata": {},
    "outputs": [
@@ -607,7 +601,7 @@
        "(226030, 17)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "be192d46",
    "metadata": {},
    "outputs": [
@@ -654,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "9d8286a8",
    "metadata": {},
    "outputs": [
@@ -681,7 +675,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "0ad255e6",
    "metadata": {},
    "outputs": [
@@ -713,7 +707,7 @@
        "Name: neighbourhood_group, Length: 226030, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "75a1acaa",
    "metadata": {},
    "outputs": [],
@@ -734,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "638115df",
    "metadata": {},
    "outputs": [
@@ -761,7 +755,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "8b2d1f05",
    "metadata": {},
    "outputs": [],
@@ -782,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "486da5f9",
    "metadata": {},
    "outputs": [
@@ -809,7 +803,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "795099c6",
    "metadata": {},
    "outputs": [],
